--- a/contact.html
+++ b/contact.html
@@ -65,45 +65,10 @@
         </div>
     </nav>
 </header>
-<main class="index" id="main">
-    <div class="flex__container">
-        <div class="heading">
-            <div class="underlay">
-                <h2>Windy, HDSy, hakowce</h2>
-                <h3>Naprawimy i zapewnimy części</h3>
-                <ul>
-                    <li>Frezowanie</li>
-                    <li>Zakuwanie przewodów hydraulicznych</li>
-                    <li>Usługi wytaczarką mobilną</li>
-                    <li>Obróbka skrawaniem metali</li>
-                    <li>Toczenie</li>
-                </ul>
-                <div class="heading__buttons">
-                    <div class="cta">Oferta</div>
-                    <div class="cta --filled">Kontakt</div>
-                </div>
-            </div>
-        </div>
+<section class="contact" id="main">
+    <div style="width: 100%;position: relative;"><iframe width="100%" height="350" src="https://maps.google.com/maps?width=700&amp;height=440&amp;hl=en&amp;q=Ogrodnik%C3%B3w%205A%2C%20Reda+(Truck%20Lift)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><div style="position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.8;font-size: 2px;background: #fff;">Powered by <a href="http://www.googlemapsgenerator.com/it/">googlemapsgenerator.com/it/</a> & <a href="https://vaticaanstadtickets.nl/de-expositie-van-leonardo-da-vinci-in-vaticaanstad/">www.vaticaanstadtickets.nl/de-expositie-van-leonardo-da-vinci-in-vaticaanstad/</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><br />
 
-        <div class="heading">
-            <div class="underlay">
-                <h2>Windy, HDSy, hakowce</h2>
-                <h3>Naprawimy i zapewnimy części</h3>
-                <ul>
-                    <li>Frezowanie</li>
-                    <li>Zakuwanie przewodów hydraulicznych</li>
-                    <li>Usługi wytaczarką mobilną</li>
-                    <li>Obróbka skrawaniem metali</li>
-                    <li>Toczenie</li>
-                </ul>
-                <div class="heading__buttons">
-                    <div class="cta">Oferta</div>
-                    <div class="cta --filled">Kontakt</div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
+</section>
 <script src="./js/menu.js"></script>
 </body>
 </html>
