--- a/services.html
+++ b/services.html
@@ -17,12 +17,12 @@
         <div class="navTrigger" tabindex=1>
             <i></i><i></i><i></i>
         </div>
-        <div class="nav__logo mobile__fixed"></div>
+        <a href="./index.html"><div class="nav__logo mobile__fixed"></div></a>
 
         <div class="nav__container">
             <div class="nav__info info">
                 <div class="nav__contact">
-                    <div class="nav__logo"></div>
+                    <a href="./index.html"><div class="nav__logo"></div></a>
                     <div class="nav__contact--block">
                         <i class="fas fa-phone"></i>
                         <div class="nav__data">
@@ -55,17 +55,17 @@
 
             <div class="nav__lower item">
                 <ul>
-                    <li><a href="#">Oferta</a></li>
-                    <li><a href="#">O nas</a></li>
-                    <li><a href="#">Historia</a></li>
-                    <li><a href="#">Certyfikaty</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="./services.html">Oferta</a></li>
+                    <li><a href="./about.html">O nas</a></li>
+                    <li><a href="./history.html">Historia</a></li>
+                    <li><a href="./certificates.html">Certyfikaty</a></li>
+                    <li><a href="./contact.html">Kontakt</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-<main class="services">
+<main class="services" id="main">
     <h1>Oferta</h1>
     <div class="flex__container">
         <div class="card" id="service">
@@ -108,6 +108,55 @@
         </div>
     </div>
 </main>
+
+<!-- FIXED MODALS -->
+
+<div id="servicemodal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="modal__header service__modal">
+            <span class="close">&times;</span>
+        </div>
+        <div class="modal__body">
+            <h3>Serwis</h3>
+            <p>Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit. Eius expedita fuga id iste,
+                iure libero magni officia quasi quidem, quos, rem sunt
+                tempora tenetur unde veniam? A ab alias animi dolores, eaque enim,
+                esse facere fuga fugit maxime molestias natus nobis perferendis quaerat
+                quasi quia quidem quis reprehenderit sit sunt tenetur voluptas voluptates?
+                Eum labore quia saepe temporibus? A dicta earum eius iste labore laudantium
+                maiores molestias nostrum obcaecati, porro quasi quia sunt. Aspernatur doloremque,
+                est fugit ipsam laboriosam magni minima non nostrum optio perspiciatis quis
+                quod ratione ullam. Adipisci animi beatae deserunt dignissimos doloribus eos
+                esse iste magni maiores maxime necessitatibus nesciunt non odit optio quidem
+                rerum sed sit, tempora tempore tenetur ut velit veritatis! Amet animi assumenda
+                delectus distinctio ea eaque facilis ipsa iste, laboriosam laborum magni nobis
+                possimus praesentium quibusdam quisquam recusandae reprehenderit ullam. Adipisci
+                </p>
+        </div>
+        <div class="modal__footer">
+            Lorem ipsum dolor sit amet.
+        </div>
+    </div>
+</div>
+<div id="coursesmodal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+    </div>
+</div>
+<div id="udtmodal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+    </div>
+</div>
 <script src="./js/menu.js"></script>
+<script src="./js/modal.js"></script>
 </body>
 </html>
