--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
     <div class="flex__container">
         <div class="heading">
             <div class="underlay">
-                <h2>Windy, HDSy, hakowce</h2>
-                <h3>Naprawimy i zapewnimy części</h3>
+                <h2>Platformy załadowcze, <br />żurawie przenośne, dźwigniki</h2>
+                <h3>Obsługa serwisowa, naprawy, konserwacja</h3>
                 <ul>
-                    <li>Frezowanie</li>
-                    <li>Zakuwanie przewodów hydraulicznych</li>
-                    <li>Usługi wytaczarką mobilną</li>
+                    <li>Naprawa i produkcja siłowników</li>
+                    <li>Produkcja węży hydraulicznych</li>
+                    <li>Naprawa i modernizacja systemów do stosowania</li>
                     <li>Obróbka skrawaniem metali</li>
-                    <li>Toczenie</li>
+                    <li>Usługi wytaczarką (tulejowanie)</li>
                 </ul>
                 <div class="heading__buttons">
                     <div class="cta">Oferta</div>
@@ -87,14 +87,14 @@
 
         <div class="heading">
             <div class="underlay">
-                <h2>Windy, HDSy, hakowce</h2>
-                <h3>Naprawimy i zapewnimy części</h3>
+                <h2>Przygotowanie dokumentacji urządzeń <br /> do rejestracji w UDT</h2>
+                <h3>Jako nieliczni w Trójmieście</h3>
                 <ul>
-                    <li>Frezowanie</li>
-                    <li>Zakuwanie przewodów hydraulicznych</li>
-                    <li>Usługi wytaczarką mobilną</li>
-                    <li>Obróbka skrawaniem metali</li>
-                    <li>Toczenie</li>
+                    <li>Wykonanie resusu UTB</li>
+                    <li>Okresowe przeglądy</li>
+                    <li>Konserwacja urządzeń UTB</li>
+                    <li>Dokumentacja</li>
+                    <li>Rejestrowanie urządzeń</li>
                 </ul>
                 <div class="heading__buttons">
                     <div class="cta">Oferta</div>
